# Deerinator

./: README.md
Admin/: IPList.txt  Protocol.txt
Daemon/: CMakeLists.txt  ShareBBBEthernet.sh
Daemon/admin/: .emacs  Doxyfile  Makefile  README  RequiredLibraries.txt  TODO.org  UbuntuInstallation.txt
Daemon/admin/cmake/Modules/: FindEigen.cmake  FindFANN.cmake  FindPOCOFoundation.cmake  FindPOCONet.cmake  FindPhidget21.cmake  FindURGC.cmake  README
Daemon/lib/: CMakeLists.txt
Daemon/lib/AI/: AICameraWrapper.cpp  AICameraWrapper.hpp  ArrayStack.cpp  ArrayStack.hpp  AutonomyDaemon.cpp  AutonomyDaemon.hpp  CMakeLists.txt  ImageDeerTracker.cpp  ImageDeerTracker.hpp  OCVCapture.cpp  VideoDeerTracker.cpp  VideoDeerTracker.hpp
Daemon/lib/accelerator/: CMakeLists.txt  toyAccel.cpp  toyAccel.hpp
Daemon/lib/camera/: CMakeLists.txt  RealCamera.cpp  RealCamera.hpp
Daemon/lib/gimble/: BBB_Gimble.cpp  BBB_Gimble.hpp  CMakeLists.txt
Daemon/lib/interface/: CMakeLists.txt  IAccelerator.hpp  ICamera.hpp  ICommandable.hpp  IDeerTracker.hpp  IGimble.hpp  IServer.hpp
Daemon/lib/mjpg-streamer/mjpg-streamer/: mjpg_streamer  start.sh
Daemon/lib/serial/: CMakeLists.txt  aaa.cpp  serial.cpp  serial.hpp
Daemon/lib/server/: CMakeLists.txt  Command.cpp  Command.hpp  TCP_Server.cpp  TCP_Server.hpp  VideoStreamer.cpp  VideoStreamer.hpp  messages.hpp
Daemon/src/: CMakeLists.txt  Daemon.cpp
Daemon/util/: CMakeLists.txt
Daemon/util/AITest/: AICameraWrapperTest.cpp  CMakeLists.txt  USBCamTest.cpp  arrayStackTest.cpp  boxingTest.cpp  camera.cpp  singleImage.cpp  videoTest_KP.cpp  videoTest_Win.cpp
Daemon/util/accelerator/: CMakeLists.txt  toyAccel.cpp
Daemon/util/controllerTest/: CMakeLists.txt  controllerTest.cpp
Daemon/util/gimble/: CMakeLists.txt  Gimble_2Test.cpp  Gimble_Client.cpp  Gimble_Test.cpp
Daemon/util/server/: CMakeLists.txt  TCP_Server_Test.cpp  VideoStreamer_Test.cpp
